added target for using API SNAPSHOT

--- a/jaxb-ri/build.xml
+++ b/jaxb-ri/build.xml
@@ -925,4 +925,8 @@ Class-Path: ${manifest.classpath}
       </sequential>
     </macrodef>
 
+  <target name="useAPISnapshots">
+      <replace file="${basedir}/project.properties" token="release.spec.version=2.2.7" value="release.spec.version=2.3-SNAPSHOT"/>
+  </target>
+
 </project>
