Changed release version. Added jaxb-extra-osgi.pom.

--- a/jaxb-ri/build.xml
+++ b/jaxb-ri/build.xml
@@ -805,6 +805,9 @@ Class-Path: ${manifest.classpath}
         <mvn.publish.remote jar="${osgi.dist}/jaxb-osgi.jar" pom="build/jaxb-osgi.pom"
             repo="https://maven.java.net/service/local/staging/deploy/maven2/" repoid="jvnet-nexus-staging" command="gpg:sign-and-deploy-file"
             password="${gpg.password}"/>
+        <mvn.publish.remote jar="${osgi.dist}/jaxb-extra-osgi.jar" pom="build/jaxb-extra-osgi.pom"
+            repo="https://maven.java.net/service/local/staging/deploy/maven2/" repoid="jvnet-nexus-staging" command="gpg:sign-and-deploy-file"
+            password="${gpg.password}"/>
         <mvn.publish.remote jar="${osgi.dist}/jaxb-osgi-sources.jar" pom="build/jaxb-osgi.pom" classifier="sources"
             repo="https://maven.java.net/service/local/staging/deploy/maven2/" repoid="jvnet-nexus-staging" command="gpg:sign-and-deploy-file"
             password="${gpg.password}"/>
