do not localize  - JAXB-915

--- a/jaxb-ri/xjc/src/com/sun/tools/xjc/MessageBundle.properties
+++ b/jaxb-ri/xjc/src/com/sun/tools/xjc/MessageBundle.properties
@@ -205,7 +205,7 @@ Driver.BuildID = @@BUILD_VERSION@@
 jaxb.jdk.version=@@JAXB_JDK_VERSION@@
 
 # see java.text.SimpleDateFormat for format syntax
-# Format should not be changed, English locale is used to transform this string into a real date.
+# DO NOT LOCALIZE, Format should not be changed, English locale is used to transform this string into a real date.
 Driver.DateFormat = \
 	yyyy.MM.dd
 
